<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lenovo_black">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_margin="15dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_email"
                app:tint="@color/colorPrimaryDark" />


            <EditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                android:hint="@string/email_addres"
                android:inputType="textEmailAddress" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


    </LinearLayout>

</RelativeLayout>
